# Lossless-Audio-Compression-Project

./: CMakeLists.txt  README.md  imgui.ini
source/: compressor.cpp  compressor.h  main.cpp
